--- a/_posts/2020-11-2-模式识别复习.md
+++ b/_posts/2020-11-2-模式识别复习.md
@@ -5,10 +5,10 @@ title: 模式识别复习
 第三章
 
 - 鉴别函数
-- 两类别facial判别，怎么判别，分类准则
+- 两类别Fisher判别，怎么判别，分类准则
 - 感知器的准则函数、梯度下降算法
 - 最小方差准则解析解
-- SVM：线性可分svm及其推导，支持向量
+- SVM：线性可分SVM及其推导，支持向量
 - 松弛方程C的意义（**）
 
 第二章
@@ -58,7 +58,7 @@ what is 协方差？
 
 多元随机矢量的线性变化仍为多元正态随机矢量
 
-- 学习方法的三要素
+- 学习方法的三要素（***）
 
 方法=模型+策略+算法
 
@@ -98,19 +98,19 @@ what is 协方差？
 
 - 训练误差和测试误差
 
-区别：训练误差是模型在训练集上的误差，泛化误差是在新样本上的误差，我们更希望得到泛化误差小的模型。测试误差是模型在测试集上的误差。训练误差的降低不一定意味着泛化误差的降低，机器学习既需要降低训练误差，又需要降低泛化误差。训练误差小，测试误差不一定小。
+区别：训练误差是模型在训练集上的误差，**泛化误差是在新样本上的误差**，我们更希望得到泛化误差小的模型。**测试误差是模型在测试集上的误差。**训练误差的降低不一定意味着泛化误差的降低，机器学习既需要降低训练误差，又需要降低泛化误差。训练误差小，测试误差不一定小。
 
-泛化误差：学习方法的泛化能力是指该方法学习到的模型对未知数据的预测能力。
+泛化误差：学习方法的**泛化能力**是指该**方法学习到的模型对未知数据的预测能力**。
 
-- 欠拟合和过拟合（判断以及如何改善）
+- **欠拟合和过拟合（判断以及如何改善）**
 
-欠拟合：模型训练误差很大，测试集的测试也很大
+欠拟合：模型训练误差很大，测试集的测试误差也很大
 
 过拟合，模型训练误差很小，但是测试误差很大，也即泛化能力较弱。
 
 改善：
 
-针对欠拟合
+针对欠拟合：
 
 ①：添加新特征
 
@@ -118,7 +118,7 @@ what is 协方差？
 
 ③： 减少正则项权重
 
-针对过拟合
+针对过拟合：
 
 ①： 由于模型训练了包含噪音在内的所有特征，导致模型过拟合，通过**获取更多的训练样本**，可以衰减噪音权重。
 
@@ -293,7 +293,7 @@ Tanimoto测度等于共同具有的特征数目与分别具有的特征种类总
 
 ![image-20210425201714992](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210425201715.png)
 
-思想：该方法取定C个类别和选取C个初始聚类中心，按最小距离原则将各模式分配到C类中的某一类，之后不断地计算类心和调整各模式的类别，最终使各模式到其判属类别中心的距离平方之和最小。
+思想：该方法取定C个类别和选取C个初始聚类中心，按**最小距离原则**将各模式分配到C类中的某一类，之后不断地计算类心和调整各模式的类别，最终**使各模式到其判属类别中心的距离平方之和最小。**
 
 <img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210425203003.png" alt="image-20210425203003767" style="zoom:50%;" />
 
@@ -311,17 +311,158 @@ Tanimoto测度等于共同具有的特征数目与分别具有的特征种类总
 
 <img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210425203506.png" alt="image-20210425203506315" style="zoom:50%;" />
 
+
+
+
+
+
+
+
+
 <img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210425203534.png" alt="image-20210425203534608" style="zoom:50%;" /><img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210425203614.png" alt="image-20210425203614639" style="zoom:50%;" />
 
+C-均值法中隐含地运用了准则函数
+
+![image-20210427150132222](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210427150132.png)
+
+随着K的增加，j^(k)^ 趋于变小。
+
 ##### 核化线性降维PCA推导
+
+PCA：使用一个超平面对所有样本进行恰当的表达
+
+这个超平面具有以下性质：
+
+- 最近重构性：样本点到这个超平面的距离足够近（尽量少的信息损失）
+- 最大可分性：样本点到这个超平面的投影，尽量分开
+
+将一组N维向量降为K维，其目标是选择K个单位正交基。使得原始数据变换到这组基后，各字段两两协方差为0，而字段的方差尽可能大（在正交的约束下，取最大的K个方差）。
+
+本质：把方差最大的方向作为主要特征，并且在各个方向上将数据离相关，使它们在不同的正交方向上没有相关性。
 
 - 核技巧
 
 基本思想：通过一个核函数（核函数）将输入空间的向量内积对应一个高维特征空间的向量内积，在高维特征空间中把数据投影到由W确定的超平面上。
+
+为什么需要它？
+
+PCA对于高阶相关性没有办法，通过核函数将非线性转化为线性。
 
 
 
 
 
 #### 第三章
+
+##### 两类别Fisher判别，怎么判别，分类准则（***）
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210426163805.png" alt="image-20210426163758780" style="zoom:50%;" />
+
+- 两类别Fish判别，怎么判别，分类准则
+
+Fisher准则函数的基本思路是**向量W的方向选择应能使两类样本投影的均值之差尽可能大些，而使类内样本的离散程度尽可能小。**
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210427194811.png" alt="image-20210427194811389" style="zoom:67%;" />
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210426165543.png" alt="image-20210426165543253" style="zoom:50%;" />
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210426165615.png" alt="image-20210426165615128" style="zoom:50%;" />
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210426170859.png" alt="image-20210426170859574" style="zoom:50%;" />
+
+下面求出**u**并把它带入到准则函数J~F~ 中求出J~F~ 。
+
+​    Fisher判别函数：变换之后的模式是一维的，因此判别界面实际上是各类模式所在轴上的一个点，因此可以根据训练模式确定阈值y~t~ 
+
+​            <img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210427202312.png" alt="image-20210427202312239" style="zoom:67%;" />
+
+判别阈值的选择：取两个类心在**u** 方向上轴的投影连线的中点作为阈值：
+
+​            <img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210427202602.png" alt="image-20210427202602898" style="zoom:67%;" />
+
+
+
+##### 感知器算法
+
+<img src="C:\Users\zhaohuizhang\AppData\Roaming\Typora\typora-user-images\image-20210426183111780.png" alt="image-20210426183111780" style="zoom:50%;" />
+
+- 问题必须是线性可分的，否则陷入死循环
+- 用训练模式检验初始的或迭代中的增广权矢量W的合理性，当不合理时，对其进行校正。
+- 校正算法实际上是最优化技术中的梯度下降法。
+
+##### 一次准则函数
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210426194740.png" alt="image-20210426194740591" style="zoom:50%;" />
+
+- 当ρ~k~ 为常数时，梯度下降法的迭代公式与感知器训练算法是一致的。
+- 当ρ~k~ 为常数时，这种梯度下降法也称为固定增量法，若ρ~k~ 取得较小，收敛速度较慢，取得较大收敛速度加快，但是搜索到接近极值点时，可能产生过调引起振荡。
+- 改进的方法是让ρ~k~ 随k变化，称之为可变增量法。
+
+##### 松弛方程C的意义（***简答）
+
+对于不是严格线性可分的，SVM可以求次优解，解决方法是：允许SVM在少量样本上出错，具体的做法就是在优化目标函数上新增一个对这些点的惩罚项
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210427111659.png" alt="image-20210427111659334"  />
+
+则优化目标变为：
+
+![image-20210427111802075](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210427111802.png)
+
+C>0称为惩罚函数，C越小对误分类惩罚越小，越容易欠拟合，越大时对误分类惩罚越大，当C取正无穷时就变成了硬间隔优化。
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210427160924.png" alt="image-20210427160924711" style="zoom: 50%;" />四种情况
+
+##### 多维缩放（MDS）算法
+
+基本思想：保持样本在原空间和低维空间的距离不变
+
+
+
+##### 给你一个数据集，如何划分训练集和验证集？交叉验证是怎么回事？
+
+- 留出法
+
+  D=S∪T      S∩T=空集
+
+- 交叉验证法
+
+​       D—>K个大小相等的互斥子集
+
+​       D=D~1~ ∪D~2~ ∪…∪D~k~ ，D~i~ ∩D~j~ =空集
+
+​        K-1个子集并集为训练集，1个测试集，重复这个步骤N次
+
+​        优点在于每个数据都单独做过测试集的同时，用了n-1个数据训练模型，几乎用到了所有数据，缺点是计算量过大。
+
+##### 判别函数的意义（三个证明）***
+
+N维空间X^n^ 中，两类问题的线性判别界面方程为：
+
+​          d(**x**)=**W~0~ ‘** **X**+W~n+1~ 
+
+此方程表示一超平面Π，有以下三个性质：
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210427163116.png" alt="image-20210427163116755" style="zoom:67%;" />
+
+分别证明
+
+ （1）
+
+​       设**x~1~ ** **x~2~ ** 在判别界面中，故他们满足方程
+
+​       带入做差有d(x~1~ —x~2~ )=<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210427163411.png" alt="image-20210427163411478" style="zoom:67%;" />
+
+​       又**x~1~ ** **x~2~ ** 在Π平面上，则1得证
+
+（2）
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210427163926.png" alt="image-20210427163926324" style="zoom:67%;" />
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210427163944.png" alt="image-20210427163944211" style="zoom:67%;" />
+
+（3)判别函数值的正负表示出特征点位于哪个半空间中
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210427165616.png" alt="image-20210427165616276" style="zoom:67%;" />
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210427165642.png" alt="image-20210427165642642" style="zoom:67%;" />
 
