--- a/_posts/2020-11-2-git.md
+++ b/_posts/2020-11-2-git.md
@@ -12,3 +12,4 @@ tags:
 
 ![image-20210618184259301](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210618184259.png)
 
+![image-20210620205840216](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210620205840.png)
