--- a/_posts/2020-11-2-数据结构与算法.md
+++ b/_posts/2020-11-2-数据结构与算法.md
@@ -107,7 +107,6 @@ RandomSeq=>标准输入=>标准输出=>Average
 - Map集合中的元素，key和value的数据类型可以相同，也可以不同
 - Map集合中的元素，key不允许重复，value可以重复
 - Map集合中的元素，key和value是一一对应的
-- 
 
  ![演示文稿2](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210510162931.png)
 
@@ -635,3 +634,213 @@ DemoDS.DemoDFS
 Process finished with exit code 0
 
 ```
+
+##### 9.2 宽度优先搜索
+
+```java
+class Solution {
+
+  public int openLock(String[] deadends, String target) {
+
+    if ("0000".equals(target)) {
+
+      return 0;
+
+    }
+
+
+
+    Set<String> dead = new HashSet<String>();
+
+    for (String deadend : deadends) {
+
+      dead.add(deadend);
+
+    }
+
+    if (dead.contains("0000")) {
+
+      return -1;
+
+    }
+
+
+
+    int step = 0;
+
+    Queue<String> queue = new LinkedList<String>();
+
+    queue.offer("0000");
+
+    Set<String> seen = new HashSet<String>();
+
+    seen.add("0000");//存放搜索记录，记忆化
+
+
+
+    while (!queue.isEmpty()) {
+        
+      ++step;
+        
+      int size = queue.size();
+
+      for (int i = 0; i < size; ++i) {
+
+        String status = queue.poll();
+
+        for (String nextStatus : get(status)) {
+
+          if (!seen.contains(nextStatus) && !dead.contains(nextStatus)) {//没有被搜索过，且deadend里面不包含
+
+            if (nextStatus.equals(target)) {
+
+              return step;
+
+            }
+
+            queue.offer(nextStatus);
+
+            seen.add(nextStatus);
+
+          }
+
+        }
+
+      }
+
+    }
+
+
+
+    return -1;
+
+  }
+
+////模拟转转盘的操作
+
+  public char numPrev(char x) {//逆着转
+
+    return x == '0' ? '9' : (char) (x - 1);
+
+  }
+
+
+
+  public char numSucc(char x) {//顺着转
+
+    return x == '9' ? '0' : (char) (x + 1);
+
+  }
+
+
+
+  // 枚举 status 通过一次旋转得到的数字
+
+  public List<String> get(String status) {
+
+    List<String> ret = new ArrayList<String>();
+
+    char[] array = status.toCharArray();//将status字符串转为char数组，再对它进行遍历
+
+    for (int i = 0; i < 4; ++i) {
+
+      char num = array[i];
+
+      array[i] = numPrev(num);
+
+      ret.add(new String(array));
+
+      array[i] = numSucc(num);
+
+      ret.add(new String(array));
+
+      array[i] = num;
+
+    }
+
+    return ret;
+
+  }
+```
+
+
+
+#### 10. 字符串的处理
+
+##### 10.1 字符串的排列
+
+![DFS](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210622113413.jpg)
+
+```java
+class Solution {
+
+  List<String> res = new LinkedList<>();
+
+  char[] c;
+
+  public String[] permutation(String s) {
+
+   c = s.toCharArray();//字符串转char数组
+
+   dfs(0);
+
+   return res.toArray(new String[res.size()]);//list.toArray()将list转为Object[],list.toArray(T[] a)转换为所需数组
+
+  }
+
+  void dfs(int x) {
+
+    if(x == c.length - 1) {  //结束条件
+
+      res.add(String.valueOf(c));  // 添加排列方案，valueOf(c),将基本数据型态转换成 String 的 static 方法
+
+      return;
+
+    }
+
+    HashSet<Character> set = new HashSet<>();
+
+    for(int i = x; i < c.length; i++) {
+
+      if(set.contains(c[i])) continue; // 重复，因此剪枝,continue跳过程序未执行的部分
+
+      set.add(c[i]);
+
+      swap(i, x);           // 交换，将 c[i] 固定在第 x 位
+
+      dfs(x + 1);           // 开启固定第 x + 1 位字符
+
+      swap(i, x);           // 恢复交换
+
+    }
+
+  }
+
+  void swap(int a, int b) {
+
+    char tmp = c[a];
+
+    c[a] = c[b];
+
+    c[b] = tmp;
+
+  }
+
+}
+```
+
+##### 11.队列
+
+###### 11.1 API
+
+boolean add(): 将指定的元素插入此队列，成功时返回true，如果空间不足，则抛出异常
+
+element()：获取但是不移除此队列的头
+
+offer()：将指定元素插入此队列，当使用容量有限制的队列时，优于add，因为add可能无法插入元素
+
+peek(): 获取但是不移除此队列的头，如果队列为空，则返回null
+
+poll(): 获取并移除此队列的头，队列为空返回null
+
+remove()：获取并移除队列的头 
