--- a/_posts/2020-11-1-Java基础.md
+++ b/_posts/2020-11-1-Java基础.md
@@ -533,3 +533,30 @@ StringBuilder类的特点:
 - 所有数据最终都会变为一个字符串
 - 和数组最大的不同就是数组存储完可以单独操作每一个元素，每一个元素都是独立的。
 - 字符串缓冲区，所有存储的元素都会被转成字符串，而且变成一个
+
+# 对象创建（what happened?）
+
+## 以创建字符串为例
+
+```java
+String str = new String(“Ecust”);
+```
+
+```java
+//String创建的字符串存储在公共池中，而new创建的字符串在堆上
+
+String s1 = “what”; //对象直接创建
+
+//String s1的意思：创建一个String类的引用变量，即以后可以用来指向对象的对象引用
+
+String s2 = s1;//引用传递
+
+String s3 = new String(“happened”);//String对象创建
+
+//new String 指是以String为模板的，在堆中创建一个对象
+
+//末尾的()代表在对象创建之后，调用String类的构造函数，对新生成的对象进行初始化
+
+//当对象的引用变量指向对象时，两者就联系起来，改变引用的属性就会改变对象的属性
+```
+
