--- a/_posts/2020-11-2-数据结构与算法.md
+++ b/_posts/2020-11-2-数据结构与算法.md
@@ -829,6 +829,9 @@ class Solution {
 }
 ```
 
+- String的split()方法：根据匹配给定的正则表达式来拆分字符串
+- String.valueOf(xx):将xx转化为字符串
+
 ##### 11.队列
 
 ###### 11.1 API
@@ -844,3 +847,15 @@ peek(): 获取但是不移除此队列的头，如果队列为空，则返回nul
 poll(): 获取并移除此队列的头，队列为空返回null
 
 remove()：获取并移除队列的头 
+
+##### 12 图
+
+###### 12.1 无向图
+
+###### 12.2 有向图
+
+- 一幅有方向的图是由一组顶点和一组有方向的边组成的，每条边都连接着有序的一对顶点
+
+- 一个顶点的出度为由该顶点指出边的总数，入度为指向该顶点边的总数
+- 一条有向边的第一个顶点称为它的头，第二个顶点这被称为它的尾
+
