--- a/_posts/2020-11-2-组态说明.md
+++ b/_posts/2020-11-2-组态说明.md
@@ -45,3 +45,8 @@ C#中的每一个类型都代表一种资源，而资源又分为两类：
 
 ## 1.DCS组态各模块功能
 
+- 如果模式为 MANual，OP 可由操作员或用户程序存储； PV 和 SP 被忽略——如果主节点存在，它会进入初始化状态。
+- 如果模式为 AUTOmatic，则 SP（或 SPP）可由操作员或用户程序存储；如果主节点存在，它会进入初始化状态。 SP 包含以工程单位表示的设定点值，SPP 包含以百分比表示的值。
+- 如果模式为 CAScade，则从主节点拉取 SP；如果主节点失控（即处于非活动状态或正在初始化）或连接不良，则 PID 块调用超时处理。
+
+- 所需的输入数量由 PID 块的模式决定。 • 如果 Mode 是 CAScade，则需要两个输入 – PV 和 SP。 • 如果模式为AUTOmatic 或MANual，则只需要PV。 -SP 是一个可初始化的输入； PV 是不可初始化的。 -PV 必须从另一个块中拉出；您无法存储到它——通常它连接到辅助或数据采集 (DATAACQ) 块的输出。 − 如果 Mode 为 CAScade，则从另一个块中拉出 SP；如果 Mode 是 AUTOmatic，它可以由操作员或用户程序存储。 -PID块可能有一个primary或没有，取决于是否配置了SP；每个可初始化输入有一个主要的。
