--- a/_posts/2021-6-18-虚拟机.md
+++ b/_posts/2021-6-18-虚拟机.md
@@ -10,7 +10,7 @@ tags:
 
 ## 运行时数据区域
 
-![演示文稿1](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210620200635.jpg)
+![运行时数据区](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210630170030.jpg)
 
 ### 程序计数器
 
