--- a/_posts/2020-11-2-Spring.md
+++ b/_posts/2020-11-2-Spring.md
@@ -185,3 +185,50 @@ public class Main {
 ![img](https://cdn.jsdelivr.net/gh/nanxi1234/picture//2020/20201106220044.png)
 
 如上，execution为连接点，concert.Performance.perform(...)为切点
+
+
+
+
+
+##### BeanFactory(定义获取bean及bean的各种属性)
+
+- 访问Spring Bean容器的根节点
+- 由许多持有bean定义的对象实现，根据bean的定义，工厂将返回包含对象的独立实例（原型设计模式），或单个共享实例（单例设计模式的高级代替方案，其中实例是工厂范围内的单例）。返回哪一种类型的实例取决于beanFactory配置。
+
+###### 原型（Prototype）设计模式
+
+克隆一个类的实例来创建新的实例
+
+优点：
+
+- 运行时增加和删除产品
+- 改变值以指定新的对象
+- 减少子类的构造
+- 类的动态装载
+
+1. 一个希望动态载入类的实例的应用不能静态引用类的构造器，而应该由运行环境在载入时自动创建每个类的实例
+
+2. 缺点：每个原型子类都必须实现clone操作，当内部包含一些不支持拷贝或有循环引用的对象时，实现克隆会很困难。
+
+###### 单例设计模式
+
+保证一个类仅有一个实例，并提供一个访问它的全局访问点。
+
+实现：让类自身负责保存它的唯一实例，这个类可以保证没有其他实例被创建（截取创建新对象 的请求），并且为他提供一个访问该实例的方法。
+
+将创建这个实例的操作隐藏在一个类操作（即一个静态成员函数或是一个类方法）后面
+
+- BeanFactory是application组件的中央注册表，并且集成了application组件的配置，对象不需要再读取属性文件。
+
+- 通常依靠依赖注入通过setter或构造函数来配置application对象，而不是通过如BeanFactory查找的方式（就是说Spring通过原型设计模式实现了动态加载）。Spring的依赖注入功能是使用BeanFactory接口及其子接口实现的。
+
+- 通常BeanFactory会加载储存在配置源（例如XML文件）中的Bean定义，但是实现类的动态加载对配置文件的存储方式没有限制。
+
+##### 核心类DefaultListableBeanFactory（是Spring注册及加载bean的默认实现）
+
+![image-20210817215648110](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210817215648.png)
+
+###### XmlBeanFactory
+
+XmlBeanFactory对DefaultListableBeanFactory进行了拓展，主要用于从Xml文件中读取BeanDifinition，对于注册和获取bean都是使用从父类DefaultListableBeanFactory继承的方法去实现，唯一不同的就是增加了XmlBeanDefinition类型的reader属性对资源文件进行读取和注册。
+
