--- a/_posts/2020-11-2-数据结构与算法.md
+++ b/_posts/2020-11-2-数据结构与算法.md
@@ -859,3 +859,45 @@ remove()：获取并移除队列的头
 - 一个顶点的出度为由该顶点指出边的总数，入度为指向该顶点边的总数
 - 一条有向边的第一个顶点称为它的头，第二个顶点这被称为它的尾
 
+```java
+package Algorithms;
+
+import edu.princeton.cs.algs4.Bag;
+
+public class Digraph {
+    private final int V;//顶点数
+    private int E;//边的总数
+    private Bag<Integer>[] adj;//创建顶点列表
+
+    public Digraph(int V){
+        //构造函数,初始化，创建有V个顶点无边的有向图
+        this.V = V;
+        this.E = 0;
+        adj = (Bag<Integer>[]) new Bag[V];//创建邻接表
+        for(int v = 0;v<V;v++){
+            adj[v] = new Bag<Integer>();
+        }
+    }
+
+    public int V(){return V;}//返回顶点数
+    public int E(){return E;}//返回边的总数
+    
+    public void addEdge(int v,int w){
+        adj[v].add(w);//添加一条v-->w的边
+        E++;
+    }
+    
+    public Iterable<Integer> adj(int v){return adj[v];}//返回由顶点v指出的所有顶点
+    
+    public Digraph reverse() {
+        Digraph R = new Digraph(V);
+        for (int v = 0; v < V; v++) {
+            for (int w : adj[v]) {
+                R.addEdge(w, v);
+            }
+        }
+        return R;
+    }
+}
+```
+
