--- a/_posts/2021-6-18-项目相关.md
+++ b/_posts/2021-6-18-项目相关.md
@@ -264,3 +264,25 @@ content：评论内容
 
 status：0正常；1禁用
 
+###### Nginx进程模型
+
+- master进程：主进程，接受外界的信号，分发给worker，如果worker发生异常，会重新启动新的worker
+
+- worker进程：工作进程，执行master的业务。
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210815163856.png" alt="image-20210815163849701" style="zoom:80%;" />
+
+###### woker抢占机制
+
+![image-20210815164301439](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210815164301.png)
+
+与传统服务器事件处理相比：
+
+![image-20210815164404546](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210815164404.png)
+
+为什么nginx的性能这么高？抢占机制以及epoll模型的异步非阻塞的通信模式（高效），多路复用器。
+
+###### nginx.conf配置结构
+
+![image-20210815165612403](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210815165612.png)
+
