--- a/_posts/2020-11-2-git.md
+++ b/_posts/2020-11-2-git.md
@@ -6,6 +6,8 @@ tags:
 
 ##### git提交命令
 
+<center>git add *</center>
+
 ![image-20210618184228217](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210618184235.png)
 
 ![image-20210618184245742](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210618184245.png)
@@ -15,3 +17,4 @@ tags:
 ![image-20210620210747408](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210620210747.png)
 
 ![image-20210620205840216](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210620205840.png)
+
