--- a/_posts/2020-11-2-计算机操作系统.md
+++ b/_posts/2020-11-2-计算机操作系统.md
@@ -23,7 +23,7 @@ title: 计算机操作系统
 ​		  潜在的开销就是性能损失，因为如果CPU必须共享，每个进程的运行就会慢一些。
 ​	
 
-通过允许资源由一个实体使用一小段时间，然后由另一个实体使用一小段时间，如此下去，所谓的资源(例如，CPU或则或网络链接)可以被许多人共享
+通过允许资源由一个实体使用一小段时间，然后由另一个实体使用一小段时间，如此下去，所谓的资源(例如，CPU、内存、磁盘或则或网络链接)可以被许多人共享
 
   空分技术：资源在空间上被划分给需要使用它的人
 
@@ -61,6 +61,11 @@ title: 计算机操作系统
 ​	从就绪到运行意味着该进程已经被调度，从运行转移到就绪意味着该进程已经取消调度。一旦进程被阻塞，OS将保持进程的这种状态，直到发生某种事件(例如，I/O完成)，此时，进程再次转入就绪状态
 
  例如：从磁盘读取数据或等待网络数据包时，进程会被阻塞。OS发现进程0不使用CPU并开始运行进程1。当进程1运行时，I/O完成(系统决定切不切回进程0)，将进程0移回就绪状态，最后，进程1结束，进程0运行，然后完成。
+
+##### 上下文切换
+
+对于停止的进程，寄存器上下文将保存其寄存器的内容，当一个进程停止时，它的寄存器将被保存到这个内存位置，通过恢复这些寄存器，操作系统可以恢复这些进程。
+
 ### 进程API
 
 - fork()系统调用：用于创建新进程
@@ -79,7 +84,9 @@ title: 计算机操作系统
   ```
 	exec()会从可执行程序中加载代码和静态数据，并用它覆写自己的代码段(以及静态数据），堆、栈及其及其他内存空间也会被初始化。然后操作系统就执行该程序，将参数通过argv传递给该进程。因此，它没有创建新进程，而是直接将当前运行的程序替换为不同的运行程序。
 	
-	这样设计API的原因：在fork()之后exec()之前，可以在运行新程序之前改变环境
+	这样设计API的原因：在fork()之后exec()之前，可以在运行新程序之前改变环境。
+	
+	应用：shell命令行工具：向它输入一个命令（一个可执行程序的名称及需要的参数），shell可以在文件系统中找到这个可执行程序，调用fork()，创建新进程，并调用exec()的某个变体来执行这个可执行程序。
 
 ## 机制：受限直接运行
 
@@ -92,9 +99,9 @@ title: 计算机操作系统
 
 存在的问题：
 
-- 操作系统如何确保程序不做任何我们不希望他做的事
+- 操作系统如何确保程序不做任何我们不希望他做的事（用户模式和内核模式）
 
-- 如何切换进程，实现CPU的时分共享
+- 如何切换进程，实现CPU的时分共享（）
 
 
   解决方法：
@@ -141,22 +148,73 @@ MLFQ规则：
 - 一旦工作用完了其在某一层的时间配额，就降低其优先级 (防止一个进程不断地在时间片用完之前主动释放CPU从而独占CPU)
 - 经过一段时间S，就将系统中的所有工作重新加入最高优先级队列 (防止长工作被饿死)
 
+关注进程的一贯表现。然后区别对待。
+
 ### 其他一些简单的进程调度算法
 
 - 先进先出(FIFO)：先到的先执行
-- 最短任务优先(SJF)：用时短的任务先做
-- 最短完成时间优先(STCF)：谁的剩余时间最少就执行谁
+- 最短任务优先(SJF)：用时短的任务先做（由于工作是随时到达的，因此，可能一个比较长的工作先到达，这样会浪费时间）
+- 最短完成时间优先(STCF)：，每当新工作进入系统时，确定剩余工作和新工作中，谁的剩余时间最少就执行谁（周转时间最优，但是响应时间不行）
 - 轮转(RR)：RR在一个时间片内循环执行所有任务直至全部完成(优点：响应时间短，但是周转时间很长)
+
+### 多处理器调度
+
+- 如何解决缓存一致性问题？
+
+  每个缓存都通过监听链接所有缓存和内存的总线，来发现内存访问，如果cpu发现对它放在缓存中的数据更新，会删除或更新本地副本。
+
+- 缓存亲密度
+
+  尽量将进程保持在同一个CPU上（在相同的cpu上运行时，由于缓存中的数据执行的更快，在不同的cpu上执行时，需要重新加载数据导致变慢）
+
+- 单队列调度（SQMS）：将所有的工作放入一个单独的队列中（由于数据共享会带来并发的问题，加锁浪费时间，并且要考虑缓存亲密度的问题）
+
+- 多队列调度（MQMS）：由于每个cpu都有自己的调度队列，每个cpu之间的调度之间相互独立，避免了单队列的方式由于数据共享和同步带来的问题。
+
+存在的问题：
+
+负载不均：让工作迁移，跨cpu迁移，可以真正实现负载均衡。如何实现？工作量较少的队列不定期检查其他队列是不是比自己工作多，如果是，就窃取一个或多个工作，实现负载均衡。问题：要确定好检查间隔，太短浪费时间，太长了，又解决不好负载不均。
+
+
 
 # 虚拟化内存
 
-操作系统在专门硬件的帮助下，通过每一个虚拟内存的索引，将其转换为物理地址
+操作系统在专门硬件的帮助下，通过每一个虚拟内存的索引，将其转换为物理地址。物理内存根据所得到的物理地址去获取所需的信息。
+
+##### 分段与分页的区别
+
+给地址空间中的每一个逻辑段一对基址和界限寄存器对，一个段是地址空间中的一个连续定长的区域，在典型的地址空间中有三个逻辑不同的段，代码，栈和堆。分段机制使得操作系统能将不同的段放到不同的物理内存区域，从而避免了虚拟地址空间中未使用部分占用物理内存。
+
+分段带来的问题：
+
+- 操作系统在上下文切换时，各个段寄存器中的内容必须保存和恢复，每个进程都有自己独立的虚拟地址空间，操作系统必须在进程运行前，确保寄存器被正确地赋值。
+- 管理物理内存的空闲空间：新的地址空间被创建时，操作系统需要在物理内存中为它的段找到空间，随着时间的推移，物理内存会很快充满许多空闲空间的小洞，因此很难分配给新的段，或扩大已有的段，这叫做外部碎片。（内部碎片：分配程序给出的内存块超出了请求的大小，超出的空间称为内部碎片，浪费的空间在已分配单元的内部）。
+- 分段不足以支持更一般化的稀疏地址空间，如果有一个很大但是很稀疏的堆都在一个逻辑段之中，整个堆还是必须全部加载到内存中。
+
+带来的额外好处：
+
+代码共享：由于代码放在独立的段之中，这样段就可以被多个运行的程序共享。
 
 
 
 
 
+##### 空闲空间管理
 
+在堆上进行空闲空间管理的数据结构称为空闲列表
+
+底层机制：分割与合并
+
+基本策略：
+
+- 最优匹配：遍历整个空闲列表，找到大于或等于请求大小的最小空闲块，这样做能够避免空间浪费，但是需要付出时间上的代价。
+- 最差匹配：与最优匹配相反，会导致过量的碎片，同时还有时间上的成本。
+- 首次匹配：找到一个足够大的块，将请求的空间返回给用户，它只需找到一个大于请求空间的数，因此较快，缺点在于每次匹配都要重头开始，会导致空闲列表的开头有很多小块。
+- 下次匹配：每一次都从上一次查找结束的位置开始查找，这样有利于将对空闲空间的查找动作扩散到整个列表中去，避免了对列表开头的频繁切割。
+
+##### 分页
+
+分页将空间分割为固定长度的分片
 
 
 
