--- a/_posts/2021-6-18-虚拟机.md
+++ b/_posts/2021-6-18-虚拟机.md
@@ -383,7 +383,15 @@ CMS通过增量更新来解决，G1采用原始快照。
 
 - 如何解决同时存在的对象创建和对象回收问题？
 
+G1为每个Region设计了两个名为TAMS(Top at Mark Start)的指针，把Region中的一部分空间划分出来用于并发回收过程中的新对象分配。并发回收时新分配对象必须要在这两个指针位置以上。G1收集器默认在这个地址以上的对象是被标记过的，不纳入回收范围。如果内存回收的速度赶不上内存分配的速度，G1收集器也要被迫冻结用户线程执行，导致Full GC,产生长时间的“Stop The World”。
 
+- 怎样建立起可靠的停顿预测模型？
+
+G1收集器的停顿模型是以**衰减均值**为理论基础来实现的，在垃圾收集过程中，G1收集器会记录每个Region的回收耗时，得出“平均值、标准偏差、置信度等统计信息”，
+
+G1的收集器的运作过程大概分为以下四个步骤：
+
+①初始标记：仅仅是标记一下GC Roots能直接关联到的对象，并且修改TAMS指针的值。
 
 #### 讲一讲类加载机制
 
