--- a/_posts/2021-7-14-并发.md
+++ b/_posts/2021-7-14-并发.md
@@ -1,3 +1,260 @@
 ---
 title: 并发
 ---
+
+
+
+###### 并发简述
+
+如果多个线程访问同一个可变的状态变量时没有使用合适的同步。那么程序就会出现错误，解决方案：
+
+- 不在线程之间共享该状态变量
+- 将状态变量修改为不可变的变量
+- 在访问状态变量时采用同步
+
+###### 有哪些对象一定是线程安全的
+
+无状态对象：既不包含任何域，也不包含任何对其他类中域的引用，由于线程访问无状态对象时不会影响其他线程，因此无状态对象是线程安全的。
+
+不可变对象：如String之类的，由于它无法被线程改变，因此它是线程安全的。
+
+###### 如何保持一致性
+
+要保持状态的一致性，就需要在单个原子操作中更新所有相关的状态变量。
+
+###### 内置锁
+
+每个java对象都可以用作一个实现同步的锁，这些锁称为内置锁，Java的内置锁相当于一种互斥锁，最多只有一个线程能持有这种锁，互斥锁会导致性能降低，因为同一时刻只有一个线程能执行加锁的代码。
+
+为什么每个对象都有一个内置锁？
+
+对于可能被多个线程同时访问的可变状态变量，在访问它时都需要持有同一个锁。之所以每个对象都有一个内置锁，只是为了免去显式地创建锁对象。
+
+###### 内存可见性
+
+我们不希望某个线程正在使用对象状态而另外一个线程同时在修改状态，而是希望确保某个线程修改了对象状态后，其他线程能够看到发生的状态变化。
+
+###### 非原子的64位操作
+
+对于非Volatile类型的long和double变量，JVM允许将64位的读操作或写操作分解为两个32位操作，在多线程程序中使用共享且可变的long、double等类型的变量也是不安全的，除非用volatile来声明它们，或者用锁保护。
+
+###### 加锁的含义
+
+加锁的含义不仅仅局限于互斥行为，还包括内存可见性，为了确保所有线程都能看到共享变量的最新值，所有执行读或者写的线程都必须在同一个锁上同步。
+
+###### 讲一讲Volatile
+
+一旦一个共享变量（类的成员变量、类的静态成员变量）被volatile修饰之后，那么就具备了两层语义：
+
+　　1）保证了不同线程对这个变量进行操作时的可见性，即一个线程修改了某个变量的值，这新值对其他线程来说是立即可见的。
+
+　　2）禁止进行指令重排序。
+
+- Volatile只能保证可见性，无法保证原子性
+
+- Volatile的原理和实现机制
+
+加入Volatile关键字时，会多出一个lock前缀指令，相当于一个内存屏障，内存屏障会提供3个功能：
+
+- 确保指令重排序时不会将其后面的指令排到内存屏障之前的位置，也不会将前面的指令排到内存屏障的后面。
+- 强制将对缓存的修改操作立即写入主存
+- 如果是写操作，会导致其它cpu中对应的缓存行无效
+
+##### 什么是线程、进程、协程
+
+###### 进程
+
+进程（Process）是计算机中的程序关于某数据集合上的一次运行活动，是**系统进行资源分配和调度的基本单位**，是[操作系统](http://baike.baidu.com/view/880.htm)结构的基础。在早期面向进程设计的计算机结构中，进程是程序的基本执行实体；在当代面向线程设计的计算机结构中，进程是线程的容器。程序是指令、数据及其组织形式的描述，进程是程序的实体。
+
+　　进程是一个具有独立功能的程序关于某个数据集合的一次运行活动。它可以申请和拥有系统资源，是一个动态的概念，是一个活动的实体。它不只是程序的[代码](http://baike.baidu.com/view/41.htm)，还包括当前的活动，通过[程序计数器](http://baike.baidu.com/view/178145.htm)的值和处理[寄存器](http://baike.baidu.com/view/6159.htm)的内容来表示。
+
+　　进程的概念主要有两点：第一，进程是一个实体。**每一个进程都有它自己的地址空间**，一般情况下，包括[文本](http://baike.baidu.com/view/300107.htm)区域（text region）、数据区域（data region）和[堆栈](http://baike.baidu.com/view/93201.htm)（stack region）。文本区域存储处理器执行的代码；数据区域存储变量和进程执行期间使用的动态分配的内存；堆栈区域存储着活动过程调用的指令和本地变量。第二，进程是一个“执行中的程序”。程序是一个没有生命的实体，只有[处理](http://baike.baidu.com/view/989420.htm)器赋予程序生命时（操作系统执行之），它才能成为一个活动的实体，我们称其为[进程](http://baike.baidu.com/view/19746.htm)。
+
+进程是具有一定独立功能的程序关于某个数据集合上的一次运行活动,进程是系统进行资源分配和调度的一个独立单位。每个进程都有自己的独立内存空间，不同进程通过进程间通信来通信。**由于进程比较重量，占据独立的内存，所以上下文进程间的切换开销（栈、寄存器、虚拟内存、文件句柄等）比较大，但相对比较稳定安全。**
+
+###### 线程
+
+**线程是进程的一个实体,是CPU调度和分派的基本单位**,它是比进程更小的能独立运行的基本单位.**线程自己基本上不拥有系统资源,只拥有一点在运行中必不可少的资源(如程序计数器,一组寄存器和栈)**,但是它可与同属一个进程的其他的线程共享进程所拥有的全部资源。线程间通信主要通过共享内存，上下文切换很快，资源开销较少，但相比进程不够稳定容易丢失数据。
+
+一个线程可以创建和撤消另一个线程，同一进程中的多个线程之间可以并发执行。由于线程之间的相互制约，致使线程 在运行中呈现出间断性。线程也有[就绪](http://baike.baidu.com/view/654230.htm)、[阻塞](http://baike.baidu.com/view/497285.htm)和[运行](http://baike.baidu.com/view/1026025.htm)三种基本状态。就绪状态是指线程具备运行的所有条件，逻辑上可以运行，在等待处理机；运行状态是指线程占有处理机正在运行；阻塞状态是指线程在等待一个事件（如某个信号量），逻辑上不可执行。每一个程序都至少有一个线程，若程序只有一个线程，那就是程序本身。
+
+线程是程序中一个单一的顺序控制流程。进程内一个相对独立的、可调度的执行单元，是系统独立调度和分派CPU的基本单位指[运行](http://baike.baidu.com/view/1026025.htm)中的程序的调度单位。在单个程序中同时运行多个线程完成不同的工作，称为[多线程](http://baike.baidu.com/view/65706.htm)。
+
+###### 协程
+
+**协程是一种用户态的轻量级线程，**协程的调度完全由**用户控制**。协程拥有自己的寄存器上下文和栈。协程调度切换时，将寄存器上下文和栈保存到其他地方，在切回来的时候，恢复先前保存的寄存器上下文和栈，直接操作栈则基本没有内核切换的开销，可以不加锁的访问全局变量，所以上下文的切换非常快。协程运行在线程之上，当一个协程执行完成后，可以选择主动让出，让另一个协程运行在当前线程之上。**协程并没有增加线程数量，只是在线程的基础之上通过分时复用的方式运行多个协程**，而且协程的切换在用户态完成，切换的代价比线程从用户态到内核态的代价小很多。
+
+###### 线程和进程的区别
+
+- 资源开销
+
+  每个进程都有独立的代码和程序上下文，程序上下文之间的切换会有较大的开销，线程可以看作轻量级的进程，同一类线程共享代码和数据空间，每个线程都有自己独立运行栈和程序计数器，线程之间切换的开销小。
+
+- 包含关系
+
+  线程是进程的一部分
+
+- 内存分配
+
+  同一进程的线程共享本进程的地址空间和资源，而进程与进程之间的地址空间和资源是相互独立的
+
+- 影响关系
+
+  一个进程崩溃后，在保护模式下不会对其它进程产生影响，但是线程崩溃有可能导致整个进程都死掉，所以多进程要比多线程健壮
+
+- 执行过程
+
+  每个独立的进程有程序运行的入口、顺序执行序列和程序出口，但是线程不能独立执行。
+
+###### 线程的状态
+
+- 新建(new)：新创建了一个线程对象
+
+- 就绪(runnable)：线程对象创建后，当调用线程对象的star()方法，该线程处于就绪状态，等待被线程调度选中，获取cpu的使用权。
+
+- 运行(running)：可运行状态的线程获得了cpu时间片，开始执行程序代码。
+
+- 阻塞(block)：处于运行状态中的线程由于某种原因，暂时放弃对CPU的使用权，停止执行。
+
+  阻塞分三种：
+
+  - 等待阻塞：运行状态中的线程执行wait()方法，JVM会把该线程放入到等待队列
+  - 同步阻塞：线程在获取synchronized同步锁失败，则JVM会把线程放入锁池中，线程进入同步阻塞状态。
+  - 其他阻塞：通过调用线程的sleep()或者join()或发出I/O请求时，线程会进入到阻塞状态，当sleep()、join()、或者I/O请求完成后，线程重新转入就绪状态。
+
+- 死亡(dead)：线程run()、main()方法执行结束，或者因异常退出了run()方法，则该线程结束生命周期
+
+###### 什么是线程安全
+
+目前主流操作系统都是多任务的，即多个进程同时运行。为了保证安全，每个进程只能访问分配给自己的内存空间，而不能访问别的进程的，这是由操作系统保障的。在每个进程的内存空间中都会有一块特殊的公共区域，通常称为堆（内存）。进程内的所有线程都可以访问到该区域，这就是造成问题的潜在原因。
+
+所以线程安全指的是，在堆内存中的数据由于可以被任何线程访问到，在没有限制的情况下存在被意外修改的风险。即堆内存空间在没有保护机制的情况下，对多线程来说是不安全的地方，因为你放进去的数据，可能被别的线程“破坏”。
+
+###### 线程一定能提高效率吗？
+
+不一定，**一是系统线程会占用非常多的内存空间，二是过多的线程切换会占用大量的系统时间。**
+
+**三是线程之间如果频繁争用数据，互相阻塞甚至死锁，将会大大降低程序的并发能力。**
+
+#### 说一说你知道的锁
+
+##### 悲观锁&&乐观锁
+
+- 悲观锁
+
+对于同一个数据的并发操作，悲观锁认为自己在使用数据时一定有别的线程来修改数据，因此在获取数据时会先加锁，确保数据不会被别的线程修改。java中Synchronized关键字和Lock的实现类都是悲观锁。
+
+- 乐观锁
+
+乐观锁认为在自己使用数据时不会有别的线程修改数据，所以不会添加锁，只是在更新数据的时候去判断之前有没有别的线程更新了这个数据，如果这个数据没有被更新，当前线程将自己修改的数据成功写入，如果已更新，则根据不同的实现方式执行不同的操作（报错或者自动重试）。
+
+###### 乐观锁是如何实现的？
+
+通过无锁编程来实现，最常用的是CAS算法，Java中原子类的递增操作就是通过CAS自旋实现的。
+
+###### 什么是CAS?
+
+Compare and swap,是一种无锁算法，在不使用锁的情况下实现线程之间的变量同步。
+
+CAS算法涉及到的三个操作数:
+
+- 需要读写的内存值
+
+- 需要比较的值A
+
+- 要写入的新值B
+
+当且仅当V的值等于A时，CAS通过原子方式用新值B来更新V的值（“比较+更新整体是一个原子操作”），否者不会进行任何操作，一般情况下，更新是一个不断重试的操作。
+
+###### CAS存在的问题
+
+- ABA问题
+
+CAS需要在操作值时的时候检查内存值是否发生变化，没有变化才会更新，但是如果内存值是A，后来变成了B，然后又变成了A，那么CAS进行检查时会发现值没发生变化，但是实际上是有变化的，ABA的解决方法是在变量前面添加版本号，每次更新的时候都把版本号加一。
+
+- 循环时间长开销大
+
+CAS操作如果长时间不成功，会导致其一直自旋，给CPU带来非常大的开销
+
+- 只能保证一个共享变量的原子操作
+
+对一个变量执行操作时，CAS能够保证原子操作，但是对多个共享变量操作时，CAS无法保证操作的原子性。
+
+java从1.5开始JDK提供AtomicReference类来保证引用对象之间的原子性，可以把多个变量放在一个对象里来进行CAS操作。
+
+##### 自旋锁&&适应性自旋锁
+
+阻塞或唤醒一个java线程需要操作系统切换CPU状态来完成，这种状态的切换需要耗费处理器较长的时间，在许多场景下，同步资源的锁定时间很短，为了这一小段时间去切换线程，线程挂起和恢复现场的花费可能会让系统得不偿失。为了解决这种问题，我们让线程自旋，如果在自旋完成后前面锁定同步资源的线程已经释放了锁，那么当前线程就可以不用阻塞而是直接获取同步资源，从而避免了线程切换的开销，这就叫做自旋锁。
+
+自旋锁本身的问题很明显，它虽然避免了线程切换的开销，但是要占用处理器的时间，如果锁被占用的时间很长，那么自旋的线程会白白浪费处理器资源，因此自旋时间要设定一个限度，超过限度没有成功获得锁，就应当挂起线程。
+
+通过对自旋时间设定限值能够避免锁的长时间自旋，但是如果设定的是一个定值，会出现刚放弃自旋，没过多久锁就被释放了，这样之前就白等了。为了解决这个问题，JDK6中引入了自适应的自旋锁。
+
+自适应自旋锁是一种根据历史情况来决定自旋时间的锁，如果在同一个锁对象上，自旋等待刚刚成功获得过锁，并且持有锁的线程正在运行中，那么虚拟机就会认为这次自旋很有可能再次成功，进而允许自旋等待持续相对较长的时间，如果对于某个锁，自旋很少成功获得过，那么以后尝试获取这个锁时将省略自旋过程，直接阻塞线程，避免浪费处理器资源
+
+##### 无锁&&偏向锁&&轻量级锁&&重量级锁
+
+对象头主要包含两部分数据：Mark Word（标记字段）、Class Point（类型指针）。
+
+- Mark Word
+
+默认存储对象的HashCode，分代年龄和锁标志位信息。
+
+- Class Point
+
+对象指向它的类元数据指针，虚拟机通过这个指针来确定这个对象是哪个类的实例
+
+这四种锁是指锁的状态，专门针对synchronized的
+
+为什么Synchronized能实现线程同步？
+
+synchronized通过Monitor来实现同步，Monitor（内置锁）是依赖底层的操作系统的Mutex Lock（互斥锁）来实现的线程同步。JDK6之前的Synchronized之所以效率低，是因为使用的是Mutex Lock，这种依赖于操作系统的锁，我们称之为“重量级锁”，JDK6中为了减少锁和释放锁带来的性能消耗，引入了“偏向锁”和“轻量级锁”。
+
+锁的4种状态：级别从低到高依次是：无锁、偏向锁、轻量级锁和重量级锁，锁只能升级不能降级。
+
+###### 无锁
+
+无锁没有对资源进行锁定，所有的线程都能访问并修改同一个资源，但同时只有一个线程能修改成功。线程会不断尝试修改贡献资源，如果没有冲突就修改成功并退出，否则就会继续尝试直至修改成功，CAS就是基于无锁来实现的。
+
+###### 偏向锁
+
+偏向锁是指一段同步代码一直被一个线程所访问，那么线程会自动获取锁，降低获取锁的代价。
+
+在大多数情况下，锁总是由同一线程多次获得，不存在多线程竞争，所以出现了偏向锁，目标是在只有一个线程执行同步代码块时能够提高性能。
+
+当一个线程访问同步块并获取锁时，会在Mark Word里存储锁偏向的线程ID，在线程进入和退出同步块时检测Mark Word里是否存储着指向当前线程的偏向锁，引入偏向锁是为了在无多线程竞争的情况下尽量减少不必要的轻量级锁执行路径。轻量级锁的获取和释放依赖多次CAS原子指令，而偏向锁只需要在置换ThreadID的时候依赖一次CAS原子指令即可。
+
+偏向锁的释放，只有遇到其它线程尝试竞争偏向锁时，持有偏向锁的线程才会释放锁，需要等到没有字节码正在执行时，先暂停拥有偏向锁的线程，判断锁对象是否处于被锁定状态，撤销偏向锁后恢复到无锁或轻量级锁的状态。
+
+###### 轻量级锁
+
+是指锁是偏向锁的时候，被另外的线程所访问，偏向锁就会升级成轻量级锁，其他线程会以自旋的形式尝试获取锁，不会阻塞，从而提高性能。
+
+虚拟机首先将在当前线程的栈帧中建立一个名为锁记录的空间，用于存储对象目前的Mark Word的拷贝，拷贝成功后，虚拟机将使用CAS操作尝试将对象的Mark Word更新为指向Lock Record的指针，并将Lock Record里的owner指针指向对象的Mark Word。，如果更新成功，那么线程就拥有了该对象的锁，并且对象的Mark Word的锁标置位设置为“00”表示此对象处于轻量级锁定状态。如果轻量级锁的更新操作失败了，虚拟机首先会检查对象的Mark Word是否指向当前线程的栈帧，如果是就说明当前线程已经拥有了这个对象的锁，那就可以直接进入同步块继续执行，否则说明多个线程竞争锁。
+
+若当前只有一个等待进程，则该进程通过自旋进行等待，但是当自旋超过一定的次数，或者一个线程在持有锁，一个在自旋，又有第三个来访问时，轻量级锁升级为重量级锁。
+
+###### 重量级锁
+
+升级为重量级锁时，锁的标志位变为“10”，此时Mark Word中存储的是指向重量级锁的指针，此时所有的所都会进入阻塞状态。
+
+综上，偏向锁通过对比Mark Word解决加锁问题，避免执行CAS操作，而轻量级锁是通过用CAS操作和自旋来解决加锁问题
+
+##### 公平锁&&非公平锁
+
+公平锁是指多个线程按照申请锁的顺序来获取锁，线程直接进入队列中排队，队列中的第一个线程才能获得锁，公平锁的优点是等待锁的线程不会饿死，缺点是整体吞吐率相对非公平要低，等待队列中除第一个线程意外的所有线程都会阻塞，CPU唤醒阻塞线程的开销比非公平锁大。
+
+非公平锁是多个线程加锁时直接尝试获取锁，获取不到时才会去队列的队尾等待，但如果此时锁刚好可用，那么这个线程可以直接无需阻塞直接获取到锁，好处是可以减少唤起线程的开销，整体的吞吐效率高，因为线程有几率不阻塞直接获得锁CPU不必唤醒所有的线程，缺点是处于等待队列中的线程可能会被饿死或等待很久才能获得锁。
+
+###### 可重入锁&&非可重入锁
+
+可重入锁：某线程的第一个子流程可以获取到锁，该线程的其它子流程也可以获取到这个锁，线程A的多个子流程都能够执行完毕并释放锁，再由其它线程获取锁。
+
+不可重入锁：只有线程的第一个子流程可以获取到锁，该线程的其他子流程无法获取到这个锁，当前线程发生死锁，导致等待队列中的所有线程都无法执行。
+
+###### 独享锁&&共享锁
+
+独享锁只能被一个线程所持有，共享锁是指能被多个线程所持有，共享锁是指该锁可被多个线程所持有，如果线程T对数据A加上共享锁后，则其他线程只能对A再加共享锁，不能加排他锁，获得共享锁的线程只能读数据，不能修改数据。
+
+#### AQS
+
