--- a/_posts/2021-7-14-并发.md
+++ b/_posts/2021-7-14-并发.md
@@ -256,5 +256,277 @@ synchronized通过Monitor来实现同步，Monitor（内置锁）是依赖底层
 
 独享锁只能被一个线程所持有，共享锁是指能被多个线程所持有，共享锁是指该锁可被多个线程所持有，如果线程T对数据A加上共享锁后，则其他线程只能对A再加共享锁，不能加排他锁，获得共享锁的线程只能读数据，不能修改数据。
 
+##### JUC简介
+
+###### Lock简介(JUC的核心组件)
+
+{@code Lock} 实现提供了比使用 {@code synchronized} 方法和语句可以获得的更广泛的锁定操作。它们允许更灵活的结构，并且可能支持多个关联的 {@link Condition} 对象。{@code synchronized} 方法或语句的使用提供对与每个对象关联的隐式监视器锁的访问，但强制所有锁获取和释放以块结构方式发生，而{@code Lock} 接口的实现允许在不同范围内获取和释放锁，并允许以任何顺序获取和释放多个锁。
+
+Lock是一个接口，定义了释放锁和获得锁的抽象方法，定义成接口就意味着它定义了锁的一个标准规范，其它的锁可以对它进行不同的实现。
+
+常见锁的实现：
+
+- ReentrantLock：表示重入锁，指线程在获取锁之后，再次获取该锁不需要再阻塞，而是直接关联一次计数器增加重入次数。
+- ReentrantWriteLock:重入读写锁，实现了ReadWriteLock接口，这个类中维护了两个锁，一个是ReadLock，一个是WriteLock，他们都分别实现了Lock接口。读写锁适合读多写少，基本原则是：读与读不互斥、读与写互斥、写与写互斥。涉及到影响数据变化的操作都会存在互斥。
+- StampedLock：读写锁虽然通过分离读与写的功能使得读与读之间可以完全并发，但是读与写是有冲突的，如果大量的读线程存在，可能就会引起写写线程的饥饿。StampedLock是一种乐观锁，不会阻塞写线程。
+
+###### ReentrantLock重入锁
+
+重入锁的是为了避免线程死锁
+
+在多线程竞争重入锁时，竞争失败的线程是如何实现阻塞以及被唤醒的/
+
 #### AQS
+
+AQS 队列内部维护的是一个 FIFO 的双向链表，这种结构的特点是每个数据结构都有两个指针，分别指向直接的后继节点和直接前驱节点。所以双向链表可以从任意一个节点开始很方便的访问前驱和后继。每个 Node 其实是由线程封装，当线程争抢锁失败后会封装成 Node 加入到 AQS 队列中去；当获取锁的线程释放锁以后，会从队列中唤醒一个阻塞的节点(线程)。
+
+Node所包含的字段：
+
+| waitStatus  |      当前节点在队列中的状态       |
+| :---------: | :-------------------------------: |
+|   thread    |       表示处于该节点的线程        |
+|    prev     |             前驱指针              |
+|    next     |             后继指针              |
+| predecessor |   返回前驱节点，没有的话抛出npe   |
+| nextWaiter  | 指向下一个处于CONDITION状态的节点 |
+
+waitStatus有以下几个枚举值：
+
+```java
+指示节点在共享模式下等待的标记
+static final Node SHARED = new Node();
+指示节点正在以独占模式等待的标记
+static final Node EXCLUSIVE = null;
+等待状态值：指示线程是否已取消
+static final int CANCELLED =  1;
+等待状态值：指示后继线程是否要被唤醒的值
+static final int SIGNAL    = -1;
+等待状态值：指示线程正在等待条件
+static final int CONDITION = -2;
+指示下一个acquireShared 应无条件传播的waitStatus 值
+static final int PROPAGATE = -3;
+```
+
+|   枚举    |                    含义                     |
+| :-------: | :-----------------------------------------: |
+|     0     |        当一个Node被初始化时的默认值         |
+| CANCELLED |      1,表示线程获取锁的请求已经取消了       |
+| CONDITION |  -2,表示节点在等待队列中，节点线程等待唤醒  |
+| PROPAGATE | -3，当线程处于SHARE情况下，该字段才会被使用 |
+|  SIGNAL   |  -1，表示线程已经准备好了，就等资源释放了   |
+
+线程两种锁的模式：SHARE/EXCLUSIVE
+
+```java
+private volatile int state;
+```
+
+- 同步状态State
+
+用于展示当前临界资源的获锁情况
+
+|                  方法名                   |                 描述                 |
+| :---------------------------------------: | :----------------------------------: |
+|                getState()                 |            获取State的值             |
+|          setState(int  newState)          | 设置State的值protected final boolean |
+| compareAndSetState(int expect,int update) |         使用CAS方式更新State         |
+
+###### AQS方法与ReentrantLock的关联
+
+|                   方法名                    |                             描述                             |
+| :-----------------------------------------: | :----------------------------------------------------------: |
+|    protected boolean isHeldExclusively()    |   该线程是否正在独占资源，只有用到Condition才需要去实现它    |
+|   protected boolean tryAcquired(int arg)    | 独占方式，arg为获取锁的次数，尝试获取资源，成功则返回True，失败则返回False |
+|    protected boolean tryRelease(int arg)    | 独占方式，arg为释放锁的次数，尝试释放资源。成功则返回True，失败则返回False |
+|   protected int tryAcquireShared(int arg)   | 共享方式，arg为获取锁的次数，尝试获取资源，负数表示失败；0表示成功，但是没有剩余可用资源；正数表示成功，且有剩余资源。 |
+| protected boolean tryReleaseShared(int arg) | 共享方式，arg为释放锁的次数，尝试释放资源，如果释放后允许唤醒后续等待节点返回True，否则返回False。 |
+
+###### 线程如何被加入到等待队列中
+
+当执行Acquired(1)时，会通过tryAcquired获取锁，如果失败就会调用addWaiter加入到等待队列中去。
+
+- 通过当前的线程和锁模式new一个节点
+- pred指针指向尾结点
+
+- 将Node的Prev指针指向Pred
+
+- 通过compareAndSetTail方法，完成尾结点的设置，主要是对tailOffset和Expect进行比较，如果tailOffset的Node和Expect的Node地址是相同的，那么设置Tail的值为update的值。
+
+![img](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210908164609.png)
+
+总结，线程获取锁的时候，过程大体如下：
+
+- 当没有线程获取到锁时，线程1获取锁成功
+- 线程2申请锁，但是锁被线程1占用
+- 如果再有线程要获取锁，依次在队列中往后排队即可
+
+hasQueuedPredecessors是公平锁加锁时判断等待队列中是否存在有效节点的方法，如果返回False，说明当前线程可以争共享资源；如果返回True，说明队列中存在有效节点，当前线程必须加入到等待队列中。
+
+双向链表中，第一个节点为虚节点，其实并不存储任何信息，只是占位。真正的第一个有数据的节点，是在第二个节点开始的。
+
+###### 何时出队列，acquireQueued源码分析
+
+```java
+/**
+ * Acquires in exclusive uninterruptible mode for thread already in
+ * queue. Used by condition wait methods as well as acquire.
+ *
+ * @param node the node
+ * @param arg the acquire argument
+ * @return {@code true} if interrupted while waiting
+ */
+final boolean acquireQueued(final Node node, int arg) {
+    boolean failed = true;
+    try {
+        boolean interrupted = false;
+        for (;;) {
+            final Node p = node.predecessor();
+            if (p == head && tryAcquire(arg)) {
+                setHead(node);
+                p.next = null; // help GC
+                failed = false;
+                return interrupted;
+            }
+            if (shouldParkAfterFailedAcquire(p, node) &&
+                parkAndCheckInterrupt())
+                interrupted = true;
+        }
+    } finally {
+        if (failed)
+            cancelAcquire(node);
+    }
+}
+```
+
+```java
+/**
+ * Checks and updates status for a node that failed to acquire.
+ * Returns true if thread should block. This is the main signal
+ * control in all acquire loops.  Requires that pred == node.prev.
+ *
+ * @param pred node's predecessor holding status
+ * @param node the node
+ * @return {@code true} if thread should block
+ */
+private static boolean shouldParkAfterFailedAcquire(Node pred, Node node) {
+    int ws = pred.waitStatus;
+    if (ws == Node.SIGNAL)
+        /*
+         * This node has already set status asking a release
+         * to signal it, so it can safely park.
+         */
+        return true;
+    if (ws > 0) {
+        /*
+         * Predecessor was cancelled. Skip over predecessors and
+         * indicate retry.
+         */
+        do {
+            node.prev = pred = pred.prev;
+        } while (pred.waitStatus > 0);
+        pred.next = node;
+    } else {
+        /*
+         * waitStatus must be 0 or PROPAGATE.  Indicate that we
+         * need a signal, but don't park yet.  Caller will need to
+         * retry to make sure it cannot acquire before parking.
+         */
+        compareAndSetWaitStatus(pred, ws, Node.SIGNAL);
+    }
+    return false;
+}
+```
+
+```java
+/**
+ * Convenience method to park and then check if interrupted
+ *
+ * @return {@code true} if interrupted
+ */
+private final boolean parkAndCheckInterrupt() {
+    LockSupport.park(this);
+    return Thread.interrupted();
+}
+```
+
+当前前置节点是头结点，且当前线程获取锁成功
+
+![img](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210908173232.png)
+
+
+
+shouldParkAfterFailedAcquire流程：
+
+![img](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210908172331.png)
+
+- shouldParkAfterFailedAcquire中取消节点是怎么生成的？什么时候会把waitStatus设置为-1？
+- 什么时候释放节点通知被挂起线程？
+
+###### CANCELLED状态节点生成
+
+```java
+/**
+ * Cancels an ongoing attempt to acquire.
+ *
+ * @param node the node
+ */
+private void cancelAcquire(Node node) {
+    // 将无效节点过滤
+    if (node == null)
+        return;
+    //设置节点不关联任何线程，即虚节点
+    node.thread = null;
+
+    // 通过前驱节点，跳过取消状态的node
+    Node pred = node.prev;
+    while (pred.waitStatus > 0)
+        node.prev = pred = pred.prev;
+
+    //获取过滤后的前驱节点的后继节点
+    Node predNext = pred.next;
+
+    //将当前的node状态设置为CANCELLED
+    node.waitStatus = Node.CANCELLED;
+
+    // 如果当前节点是尾节点，将从后往前的的第一个非取消状态的节点设置为尾结点
+    //更新失败的话，进入else，更新成功，将tail的后继节点设置为null
+    if (node == tail && compareAndSetTail(node, pred)) {
+        compareAndSetNext(pred, predNext, null);
+    } else {
+        // If successor needs signal, try to set pred's next-link
+        // so it will get one. Otherwise wake it up to propagate.
+        int ws;
+        if (pred != head &&
+            ((ws = pred.waitStatus) == Node.SIGNAL ||
+             (ws <= 0 && compareAndSetWaitStatus(pred, ws, Node.SIGNAL))) &&
+            pred.thread != null) {
+            Node next = node.next;
+            if (next != null && next.waitStatus <= 0)
+                compareAndSetNext(pred, predNext, next);
+        } else {
+            unparkSuccessor(node);
+        }
+
+        node.next = node; // help GC
+    }
+}
+```
+
+- 获取当前节点的前驱节点，如果前驱节点的状态是CANCELLED，那就一直往前遍历，找到第一个waitStatus<=0的节点，将找到的Pred节点和当前Node关联，将当前的Node设置为CANCELLED。
+
+- 根据当前节点的位置，考虑以下三种情况：
+
+  1. 当前节点是尾结点
+
+  ![img](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210908191222.png)
+
+  2. 当前节点是Head的后继节点
+
+  ![img](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210908191335.png)
+
+  3. 当前节点不是Head的后继节点，也不是尾结点
+
+![img](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210908193835.png)
+
+- 为什么只对next指针进行操作，不对Prev指针进行操作？什么情况下会对Prev操作？
 
