--- a/_posts/2021-7-14-并发.md
+++ b/_posts/2021-7-14-并发.md
@@ -530,3 +530,60 @@ private void cancelAcquire(Node node) {
 
 - 为什么只对next指针进行操作，不对Prev指针进行操作？什么情况下会对Prev操作？
 
+
+
+#### 线程池
+
+##### 基本概念
+
+线程池主要是控制运行线程的数量，将待处理任务放到等待队列，然后创建线程执行这些任务，如果超过了最大线程数，则等待其他线程执行完毕，再从队列中取出任务执行。
+
+为什么使用线程池？
+
+现在是多核电脑，多个线程各自跑在自己的CPU上，不用切换效率高
+
+优点：
+
+- 线程复用：不用一直new线程，重复利用已经创建的线程来降低线程的创建和销毁开销，节省系统资源。（用完回到线程池给其他任务用）
+
+- 提高响应速度
+- 管理线程：可以控制最大并发数，控制线程的创建等
+
+核心类：Executor→ExecutorService→AbstractExecutorService→ThreadPoolExecutor是线程创建的核心类。
+
+| Excutors.newFixedThreadPool(int)  |         一池固定数量的线程，执行长期任务，性能会很好         |
+| :-------------------------------: | :----------------------------------------------------------: |
+| Excutors.newSingleThreadPool(int) |                一池一个线程，一个任务一个线程                |
+| Excutors.newCachedThreadPool(int) | 一池不定数量的线程，适用于短期异步小任务或者或者负载较轻的任务 |
+
+ThreadPoolExecutor：最好不用Executors去创建，而是通过ThreadPoolExecutor的方式，为什么？
+
+FixedThreadPool和CachedThreadPool允许的请求队列长度为Integer.MAX_VALUE，可能会堆积大量的请求，从而导致OOM。
+
+CachedThreadPool允许创建的线程数量为Integer.MAX_VALUE，可能会创建大量的线程，从而导致OOM。
+
+##### ThreadPoolExecutor
+
+|  corePoolSize   |                   线程池中的常驻核心线程数                   |
+| :-------------: | :----------------------------------------------------------: |
+| maximumPoolSize |   线程池中能够容纳同时指向的**最大线程数**，必须大于等于1    |
+|  keepAliveTime  |                 多余的空闲线程的**存活时间**                 |
+|      unit       |               keepAliveTime**存活时间的单位**                |
+|    workQueue    |          **任务队列**，存放已提交但是尚未执行的任务          |
+|  threadFactory  |     表示生成线程池中工作线程的**线程工厂**，用于创建线程     |
+|     handler     | **拒绝策略**，表示队列满了，并且工作线程大于等于线程池的最大线程数，拒绝请求执行的runnable的策略 |
+
+###### 组塞队列的应用
+
+<img src="https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210909214914.png" alt="image-20210909214914591" style="zoom:80%;" />
+
+![image-20210909214942810](https://cdn.jsdelivr.net/gh/nanxi1234/nanxi1234.github.io/image/2021/20210909214942.png)
+
+###### 线程池的拒绝策略
+
+| AbortPolicy         | 直接抛出RejectedException    |
+| ------------------- | ---------------------------- |
+| CallerRunsPolicy    | 回退给调用者                 |
+| DiscardOldestPolicy | 丢弃阻塞队列中等待最久的任务 |
+| DiscardPolicy       | 直接丢弃                     |
+
